[metadata]
name = lfortran-language-server
version = 0.0.1
author = Dylon Edwards
author_email = dylon.devo@gmail.com
description = LSP client for testing lfortran-language-server.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lfortran/lfortran
project_urls =
    Bug Tracker = https://github.com/lfortran/lfortran/issues
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pytest>=8.3.5
    pytest-timeout>=2.3.1
    llanguage-test-client>=0.0.1

[options.packages.find]
where = src
