[metadata]
name = llanguage-test-client
version = 0.0.1
author = Dylon Edwards
author_email = dylon.devo@gmail.com
description = LSP client for testing llanguage-server.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lfortran/lfortran
project_urls =
    Bug Tracker = https://github.com/lfortran/lfortran/issues
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    attrs==24.3.0
    cattrs==24.1.2
    lsprotocol==2023.0.1

[options.packages.find]
where = src